log
Fri 29 Mar 2024 09:42:50 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘List’
   37 |      return List;
      |             ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ff95e12
Fri 29 Mar 2024 09:43:09 PM UTC: 
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:37:13: error: expected expression before ‘List’
   37 |      return List;
      |             ^~~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7545250
Fri 29 Mar 2024 09:44:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
 tests:  1|5
total_score: 10/70
total_score: 10/70
e2c18e3
e2c18e3
Fri 29 Mar 2024 09:46:52 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
590c381
